deploy/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 3000
